fixed dark mode inconsistencies bug

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
     #navbar-sticky {
-        background-color: #1a1a1a;
+        background-color: #1a1a1a00;
     }
 }
 
